fix: too big margin on contact page

--- a/style.css
+++ b/style.css
@@ -462,7 +462,7 @@ body {
 
 .contact-section {
     display: flex;
-    margin: 10rem auto;
+    margin: 2rem auto;
     width: 80%;
 }
 
